docs: CORS deep, JVM 5 production diagnostic patterns, ORM N+1, Pulsar comparison
http-https.md: TLS 1.3 0-RTT replay attack risk; same-origin policy + CORS preflight + 5 response headers + credentials mode + Spring Boot config
jvm-internals.md: 5 production diagnostic patterns (CPU 100%, memory leak, frequent Full GC, slow response, JVM crash), Arthas cheatsheet
orm-integration.md: HikariCP pitfalls top 3, N+1 problem (JPA JOIN FETCH/@EntityGraph/@BatchSize + MyBatis nested resultMap), Hibernate L1/L2 cache, dirty read trap
message-queue.md: Pulsar vs Kafka (storage-compute separation, multi-tenancy, geo-replication), 3-end reliability checklist (Producer/Broker/Consumer)